--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   get: ^4.3.8
+  fluttertoast: ^8.0.8
   image_picker: ^0.8.4+3
 
 dev_dependencies:
