--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   http: ^0.13.4
   get: ^4.3.8
   fluttertoast: ^8.0.8
-  image_picker: ^0.8.4+3
+  image_picker: ^0.8.4+4
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
